Se incorpora la tabla Theme, se agregan atributos a la tabla Instrument: 'weight' y 'measures'. Se realizaron pruebas en Postman y se incorpora el archivo 'Local_Music_House.postman_collection' con los CRUD de la API. Además, se añade el atributo 'registDate' en todas las entidades para gestionar la fecha de creación automáticamente.